<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#C0C0C0"
        android:text="@string/Funciones"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="normal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sin_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="40dp"
            android:text="@string/SIN"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/cos_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:text="@string/COS"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/TAN_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:text="@string/TAN"
            android:textAppearance="?android:textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/gra_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#C0C0C0"
        android:text="@string/Grados"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="normal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/cua_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="45"
            android:textAppearance="?android:textAppearanceMedium"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/nov_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="90"
            android:textAppearance="?android:textAppearanceMedium"
            tools:ignore="HardcodedText" />

        <RadioButton
            android:id="@+id/cie_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="180"
            android:textAppearance="?android:textAppearanceMedium"
            tools:ignore="HardcodedText" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ang1_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/angulo45" />

    <TextView
        android:id="@+id/res_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:text="@string/Resultado"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="normal" />
</LinearLayout>